======== IMPORTANT: rename this, and add a new "Future" section, BEFORE ========
======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features
- DFHack and the Dwarf Fortress translation project can now both be run at the same time

## Fixes
- `zone`: fix display of distance from cage for small pets in assignment dialog
- `blueprint`: correctly record stockpile ("place") blueprints when there are adjacent non-rectangular stockpiles of identical types
- `dig`: refresh count of tiles that will be modified by "mark all designated tiles on this z-level for warm/damp dig" when the z-level changes
- `dig`: don't affect already-revealed tiles when marking z-level for warm/damp dig

## Misc Improvements
- `caravan`: display who is in the cages you are selecting for trade and whether they are hostile
- `regrass`: can now add grass to stairs, ramps, ashes, buildings, muddy stone, shrubs, and trees
- `regrass`: can now restrict regrass effect to specified tile, block, cuboid, or z-levels
- `regrass`: can now add grass in map blocks where there hasn't been any, force specific grass type
- `dig`: warm/damp/aquifer status will now be shown in mining mode for tiles that your dwarves can see from the level below
- `dig`: warm/damp/aquifer status will now be shown when in smoothing/engraving modes
- `stockpiles`: support import and export "desired items" configuration for route stops
- New commandline options for controlling the Cloud Save coprocess when launching from Steam. See the `dfhack-core` documentation for details.
- `markdown`: new keybinding for triggering text export: Ctrl-t

## Documentation
- Quickfort Blueprint Library: add demo video for pump stack blueprint
- Update docs for dependency requirements and compilation procedures

## API